2007-09-26  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-utilities.[ch]:
	Make string args const char * where possible.

        * libnautilus-private/nautilus-desktop-icon-file.c:
        * libnautilus-private/nautilus-directory-async.c:
        * libnautilus-private/nautilus-file-private.h:
        * libnautilus-private/nautilus-file.c:
	Read display_name and edit_name from gio.
	Kill old cached_display_name creation.
	Use eel_ref_str for name, display_name, edit_name and make sure to
	share them when possible.
	Old use of display_name as the link info only is moved so that
	its shared with the normal name, with got_custom_display_name showing
	where its from.

2007-09-26  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-private.h:
        * libnautilus-private/nautilus-file.c:
	Use new refcounted string implementation for mime_type.
	This way we don't have to store duplicate strings for
	each file.

2007-09-26  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-directory.c (nautilus_directory_finalize):
	directory->details->pending_file_info now has GFileInfo objects, not
	GnomeVFSFileInfo objects. Free them in the correct way.

2007-09-26  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-directory-async.c:
	Remove old irrelevant comment
	
2007-09-26  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-directory-async.c:
	Read top left text with gio

2007-09-26  Alexander Larsson  <alexl@redhat.com>

        * src/file-manager/fm-ditem-page.c:
	Use g_file_load_contents_async instead of
	eel_read_entire_file_async.

2007-09-26  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-icon-factory.c:
        * libnautilus-private/nautilus-thumbnails.c:
	Use g_file_load_contents_async instead of
	eel_read_entire_file_async.

2007-09-26  Alexander Larsson  <alexl@redhat.com>
