@@ -1,5 +1,10 @@
 2007-09-26  Alexander Larsson  <alexl@redhat.com>
 
+        * libnautilus-private/nautilus-file.[ch]:
+	Add nautilus_file_get_edit_name()
+
+2007-09-26  Alexander Larsson  <alexl@redhat.com>
+
         * libnautilus-private/nautilus-file-utilities.[ch]:
 	Make string args const char * where possible.
 
